# ai-on-gke

./: .gitignore  .gitmodules  404.html  CODEOWNERS  Makefile  README.md  a3mega_workloads.tfvars  a3ultra_workloads.tfvars  applications.tf  backend.tf  cloud_sql.py  cloudbuild-ap.yaml  cloudbuild.yaml  cloudbuild_cleanup.yaml  cloudbuild_hcc.yaml  contributing.md  gke-batch-refarch  gs  index.html  jupyter-on-gke  main.tf  manifest.yaml  metadata.display.yaml  metadata.yaml  nemollm-inference-0.1.2.tgz  outputs.tf  platform.tf  providers.tf  ray-on-gke  region.tf  script.js  sitemap.xml  terraform.tfvars  tutorial.md  update_zone_region.py  variables.tf  versions.tf  violation_scan_helm.yaml
.github/: pull_request_template.md
applications/: workloads.tfvars
autometric-failover/detector/: .gitignore  Dockerfile  README.md  pyproject.toml
autometric-failover/detector/config/base/: kustomization.yaml  manifests.yaml
autometric-failover/detector/config/cool-machine-learning/: kustomization.yaml
autometric-failover/detector/hack/exec-format-error/: Dockerfile
autometric-failover/detector/src/detector/: client.py  logging_detectors.py  logging_verifiers.py  main.py  runner.py
benchmarks/: 65k-cpu-nodes-simulated-ai-benchmark.md  65k-nodes-simulated-ai-workload.md  README.md  accelerator-based-ai-benchmark.md  gpu-benchmark.md
best-practices/: README.md  hotswap.md  index.html  startup-latency.md
cloudshell-tutorial/: index.html
example_notebooks/: ray_mnist.ipynb  stable_diffusion.ipynb
finetuning-llama-7b-on-l4/: README.md  download-model.yaml  (+1 more)
(+3398 files in other folders)
