[project]
name = "checks"
version = "0.1.0"
description = "Autometric failover checks for Google Cloud logs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dataclasses-json>=0.6.7",
    "google-cloud-logging>=3.11.4",
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

